--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,24 +45,25 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --background: hsl(239 0% 100%);
+  --foreground: hsl(239 0% 10%);
+  --card: hsl(239 0% 100%);
+  --card-foreground: hsl(239 0% 15%);
+  --popover: hsl(239 0% 100%);
+  --popover-foreground: hsl(239 95% 10%);
+  --primary: hsl(239 71% 23%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(239 10% 90%);
+  --secondary-foreground: hsl(0 0% 0%);
+  --muted: hsl(201 10% 95%);
+  --muted-foreground: hsl(239 0% 40%);
+  --accent: hsl(201 10% 90%);
+  --accent-foreground: hsl(239 0% 15%);
+  --destructive: hsl(0 50% 50%);
+  --destructive-foreground: 239 0% 100%;
+  --border: hsl(239 20% 82%);
+  --input: hsl(239 20% 50%);
+  --ring: hsl(239 71% 23%);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
