Feat: comparison section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,24 +80,26 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
+  --radius: 0.625rem;
+  --background: hsl(259 50% 10%);
+  --foreground: hsl(259 5% 100%);
+  --card: hsl(259 50% 10%);
+  --card-foreground: hsl(259 5% 100%);
+  --popover: hsl(259 50% 5%);
+  --popover-foreground: hsl(259 5% 100%);
+  --primary: hsl(259 0% 100%);
+  --primary-foreground: hsl(0 0% 0%);
+  --secondary: hsl(259 30% 20%);
+  --secondary-foreground: hsl(0 0% 100%);
+  --muted: hsl(221 30% 25%);
+  --muted-foreground: hsl(259 5% 65%);
+  --accent: hsl(221 30% 25%);
+  --accent-foreground: hsl(259 5% 95%);
+  --destructive: hsl(0 67% 50%);
+  --destructive-foreground: hsl(259 5% 100%);
+  --border: hsl(259 30% 50%);
+  --input: hsl(259 30% 50%);
+  --ring: hsl(259 0% 100%);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
@@ -119,5 +121,6 @@
   }
   body {
     @apply bg-background text-foreground;
+
   }
 }
